--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,20 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Sumbetweennumbers",
+            "request": "launch",
+            "mainClass": "practice_prgms.Sumbetweennumbers",
+            "projectName": "SIVADHARSHINI-AISECT_45f78658"
+        },
+        {
+            "type": "java",
+            "name": "Factorial",
+            "request": "launch",
+            "mainClass": "practice_prgms.Factorial",
+            "projectName": "SIVADHARSHINI-AISECT_45f78658"
+        },
+        {
+            "type": "java",
             "name": "Trainticketsystem",
             "request": "launch",
             "mainClass": "practice_prgms.Trainticketsystem",
